feat: remove google tracking

--- a/claat/render/template.html
+++ b/claat/render/template.html
@@ -34,10 +34,7 @@ the License.
   </style>
 </head>
 <body>
-  <google-codelab-analytics gaid="{{.GlobalGA}}" ga4id="{{.GlobalGA4}}"></google-codelab-analytics>
-  <google-codelab codelab-gaid="{{.Meta.GA}}"
-                  codelab-ga4id="{{.Meta.GA4}}"
-                  id="{{.Meta.ID}}"
+  <google-codelab id="{{.Meta.ID}}"
                   title="{{.Meta.Title}}"
                   environment="{{index .Env}}"
                   feedback-link="{{.Meta.Feedback}}">
