--- a/claat/render/template.html
+++ b/claat/render/template.html
@@ -19,6 +19,7 @@ the License.
 <head>
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
   <meta name="theme-color" content="#4F7DC9">
+  <meta name="return_to" content="/codelabs">
   <meta charset="UTF-8">
   <title>{{.Meta.Title}}</title>
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Source+Code+Pro:400|Roboto:400,300,400italic,500,700|Roboto+Mono">
@@ -50,6 +51,18 @@ the License.
   <script src="{{.Prefix}}/claat-public/prettify.js"></script>
   <script src="{{.Prefix}}/claat-public/codelab-elements.js"></script>
   <script src="//support.google.com/inapp/api.js"></script>
+  <script>
+    function updateDoneLink() {
+      const returnToMeta = document.querySelector('meta[name="return_to"]');
+      const returnTo = returnToMeta ? returnToMeta.getAttribute('content') : '/';
+      const doneLink = document.getElementById('done');
+      if (doneLink) {
+          doneLink.href = returnTo;
+      }
+    }
 
+    // Call the function after the DOM is fully loaded
+    document.addEventListener("DOMContentLoaded", updateDoneLink)
+  </script>
 </body>
 </html>
