--- a/claat/render/template.html
+++ b/claat/render/template.html
@@ -19,7 +19,8 @@ the License.
 <head>
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
   <meta name="theme-color" content="#4F7DC9">
-  <meta name="return_to" content="/codelabs">
+  <!-- Note that this always assumes we go back up two folders! -->
+  <meta name="return_to" content="../../">
   <meta charset="UTF-8">
   <title>{{.Meta.Title}}</title>
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Source+Code+Pro:400|Roboto:400,300,400italic,500,700|Roboto+Mono">
@@ -59,9 +60,14 @@ the License.
       if (doneLink) {
           doneLink.href = returnTo;
       }
+    
+    const arrow = document.getElementById('arrow-back');
+      if (arrow) {
+        arrow.href = returnTo;
+      }
     }
 
-    // Call the function after the DOM is fully loaded
+    
     document.addEventListener("DOMContentLoaded", updateDoneLink)
   </script>
 </body>
